--- a/styles/style.css
+++ b/styles/style.css
@@ -10,10 +10,12 @@ ol,
 ul {
   margin: 0;
   padding: 0;
+  opacity: 0.9;
 }
 h2,
 h4 {
   margin: 15px;
+  opacity: 0.9;
 }
 
 ol,
@@ -31,7 +33,6 @@ body {
   font-size: 22px;
   color: seashell;
   background-color: black;
-  opacity: 0.9;
 }
 
 /* Header Section */
@@ -63,6 +64,7 @@ header {
 
 .mission-background {
   background-image: url("../images/img-mission-background.jpg");
+  background-size: cover;
   width: 1200px;
   height: 700px;
   display: flex;
@@ -91,7 +93,7 @@ header {
 figure {
   margin: 10px 15px;
 }
-figcaption {
+figcaption h4 {
   text-align: center;
   margin-top: 10px;
 }
@@ -105,4 +107,38 @@ figcaption {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+/* Location Section */
+.locations {
+  display: flex;
+  justify-content: center;
+}
+
+.location-content {
+  background-image: url("../images/img-locations-background.jpg");
+  width: 1200px;
+  height: 500px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.location-boxes {
+  margin-top: 15px;
+  display: flex;
+  gap: 40px;
+}
+.location-boxes div {
+  background-color: black;
+  width: 300px;
+  height: 300px;
+  text-align: center;
+  opacity: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
