--- a/styles/style.css
+++ b/styles/style.css
@@ -142,3 +142,14 @@ figcaption h4 {
   flex-direction: column;
   justify-content: space-around;
 }
+.contact {
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+.copyright {
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
